--- a/privacy.html
+++ b/privacy.html
@@ -433,7 +433,9 @@
                 <div class="contact-card">
                     <h3>📧 Get in Touch</h3>
                     <p>We're happy to answer any questions about your privacy.</p>
-                    <a href="mailto:jubaljacobplagereinc@protonmail.com">jubaljacobplagereinc@protonmail.com</a>
+                    <a href="support.html"
+                        style="display: inline-flex; align-items: center; gap: 8px; padding: 14px 28px; background: linear-gradient(135deg, var(--accent-cyan), #00b3d6); color: #000; font-weight: 700; border-radius: 50px; text-decoration: none;">Contact
+                        Support</a>
                 </div>
             </div>
 
