--- a/support.html
+++ b/support.html
@@ -372,7 +372,8 @@
                         <h3>Email Support</h3>
                         <p>For general inquiries, technical support, or feedback, email us at:</p>
                         <p style="margin-top: 12px;">
-                            <a href="mailto:jubaljacobplagereinc@protonmail.com">jubaljacobplagereinc@protonmail.com</a>
+                            <a href="support.html#contactForm" class="cta-button"
+                                style="display: inline-flex; padding: 12px 24px; font-size: 0.9rem;">Contact Support</a>
                         </p>
                     </div>
 
@@ -403,7 +404,7 @@
                 <!-- Contact Form -->
                 <div class="contact-form-wrapper fade-in-up delay-1">
                     <h2>Send Us a Message</h2>
-                    <form id="contactForm" action="https://formsubmit.co/jubaljacobplagereinc@protonmail.com"
+                    <form id="contactForm" action="https://formsubmit.co/73dbaf8e54d02be7b8487abe7dbc1f4d"
                         method="POST">
                         <!-- FormSubmit Configuration -->
                         <input type="hidden" name="_subject" value="ReclaimHeight Support Request">
